[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13.6",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "florid-usb"
version = "0.1.0"
description = "Ragtime Florid USB SDK - MIT direct control over USB CDC"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[tool.scikit-build]
cmake.version = ">=3.21"
cmake.build-type = "Release"
wheel.packages = []
sdist.inclusion-mode = "explicit"
sdist.include = [
    "CMakeLists.txt",
    "cmake/**",
    "include/**",
    "src/**",
    "python/*.py",
    "python/CMakeLists.txt",
    "python/pybind.cpp",
    "protocols/**",
    "3rdparty/**",
    "README.md",
    "LICENSE",
]
sdist.exclude = [
    "python/Ragtime_Willow_description/**",
]

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"
BUILD_EXAMPLES = "OFF"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-manylinux_i686 *-musllinux_* pp*"
test-command = "python -c \"import florid_usb; print(florid_usb.__doc__)\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
